<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:foregroundGravity="fill_horizontal"
        android:gravity="center"
        android:orientation="horizontal"
        app:barrierMargin="4dp"
        app:checkedButton="@id/button_expence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <Button
            android:id="@+id/button_expence"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expence" />

        <Button
            android:id="@+id/button_income"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income" />

        <Button
            android:id="@+id/button_transfer"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer"
            android:visibility="gone"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/account_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type"
        style="@style/Widget.AppCompat.Button.Colored"
        android:drawableStart="@drawable/baseline_account_balance_wallet_24"
        tools:text="Cache" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_source"
        style="@style/Widget.AppCompat.Button.Colored"
        android:drawableStart="@drawable/baseline_category_24"
        tools:text="Food" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:digits="0123456789."
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_amount"
        android:drawableStart="@drawable/baseline_date_range_24"
        tools:text="@tools:sample/date/ddmmyy" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/note">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/transaction_save_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="20sp"
        android:textColor="@color/design_default_color_primary"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_note"/>

</androidx.constraintlayout.widget.ConstraintLayout>