<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/baseline_show_chart_24"
        android:title="@string/title_reports" />

    <item
        android:id="@+id/navigation_currencies"
        android:icon="@drawable/baseline_currency_exchange_24"
        android:title="@string/title_currencies" />

</menu>